2003-12-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/diff.tcl (move):
	* gui/elix.tcl (constructor): Use centerOnScreen
	method instead of center.
	* gui/window.tcl (centerOnScreen, center,
	move_to_mouse, sn_set_window_size): Remove
	unused sn_set_window_size proc. Remove
	center method and remove call to center
	method from centerOnScreen. This used to
	be needed for the Win32 version of Tk
	but these bugs were fixed long ago. Add
	new explicit_width and explicit_height
	and use them if the width and height
	are set via the -geometry property.
	This is needed so that windows like the
	project editor will be centered properly
	when first created. [Bug 863275]

2003-12-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_hide_show_project):
	* gui/multiview.tcl (constructor):
	* gui/statistics.tcl (sn_statistic):
	* gui/symbolbrowser.tcl (constructor):
	* gui/window.tcl (geometry): Make sure to use the
	-geometry property when configuring the geometry
	of a sourcenav::Window object. Don't use the geometry
	method defined on the class to attempt to change
	the geometry since it only returns the geometry.

2003-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/bindings.tcl (sn_text_default_bindings):
	Add missing close brace that was causing the
	startup scripts to fail.

2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	Add SN-52B1-2003-12-06 tag.

	* NEWS: Add news item for b1 release.
	* configure: Regen.
	* configure.in: Update version number to 5.2b1.

2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/bindings.tcl (sn_treetable_bindings,
	sn_text_default_bindings, sn_canv_goto_bindings):
	Implement MouseWheel binding for Win32 and
	Button 4/5 button scroll bindings for
	X11 based systems. Based on patches submitted
	by Brad Forden and John Lash. [Bug 814341]

2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (db_remove_file_def): Rework
	the function that removes all symbols for